# challenge-builder

./: .gitignore  README.md  build_challenge.py  pyproject.toml
ctf_challenge_builder/: __init__.py  build_challenge.py  build_pipeline.py  bundle_manager.py  challenge_builder.py  ctfd_client.py  ctfd_sync.py  docker_manager.py  logger.py  utils.py
ctf_challenge_builder/pulumi-template/: Pulumi.yaml  go.mod  main.go
pulumi-template/: go.mod  go.sum
